--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container col-md-6">
@@ -17,31 +19,31 @@
         <form>
             <div class="form-group">
                 <label for="last-name" class="font-weight-bold font-italic">Enter your last name:</label>
-                <input type="text" id="last-name" placeholder="Last name" class="form-control" required>
+                <input type="text" id="last-name" placeholder="Last name" class="form-control">
             </div>
             <div class="form-group">
                 <label for="name" class="font-weight-bold font-italic">Enter name:</label>
-                <input type="text" id="name" placeholder="Name" class="form-control" required>
+                <input type="text" id="name" placeholder="Name" class="form-control">
             </div>
             <div class="form-group">
                 <label for="surname" class="font-weight-bold font-italic">Enter your surname:</label>
-                <input type="text" id="surname" placeholder="Surname" class="form-control" required>
+                <input type="text" id="surname" placeholder="Surname" class="form-control">
             </div>
 
             <div class="font-weight-bold font-italic">Choose employee type:</div>
             <div class="form-check">
-                <input type="radio" name="employeeType" id="wage-employee" value="1" class="form-check-input" required>
+                <input type="radio" name="employeeType" id="wage-employee" value="1" class="form-check-input">
                 <label for="wage-employee" class="form-check-label">Wage employee</label>
             </div>
             <div class="form-group">
-                <input type="text" id="hour-rate" placeholder="Enter hour rate" class="form-control">
+                <input type="number" id="hour-rate" placeholder="Enter hour rate" class="form-control">
             </div>
             <div class="form-check">
-                <input type="radio" name="employeeType" id="fixed-rate-employee" value="2" class="form-check-input" required>
+                <input type="radio" name="employeeType" id="fixed-rate-employee" value="2" class="form-check-input">
                 <label for="fixed-rate-employee" class="form-check-label">Fixed rate employee</label>
             </div>
             <div class="form-group">
-                <input type="text" id="fixed-salary" placeholder="Enter fixed rate salary" class="form-control">
+                <input type="number" id="fixed-salary" placeholder="Enter fixed rate salary" class="form-control">
             </div>
 
             <div class="row justify-content-md-center">
@@ -50,6 +52,21 @@
         </form>
     </div>
 
+    <div class="container col-md-10">
+        <h1 class="text-center">All employees</h1>
+        <table class="table table-stripped" id="allEmployeesTable">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Last name</th>
+                    <th>Name</th>
+                    <th>Surname</th>
+                    <th>Salary</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
     
     <script src="js/script.js"></script>
 </body>
