Implemented sort method, added render of tables "Top 5 Employees" and "Last 3 employees"

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <div class="container col-md-10">
         <h1 class="text-center">All employees</h1>
-        <table class="table table-stripped" id="allEmployeesTable">
+        <table class="table table-striped employeesTable" id="allEmployeesTable">
             <thead>
                 <tr>
                     <th>Id</th>
@@ -62,6 +62,29 @@
                     <th>Name</th>
                     <th>Surname</th>
                     <th>Salary</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+
+        <h1 class="text-center">Top 5 employees</h1>
+        <table class="table table-striped employeesTable" id="topFiveEmployeesTable">
+            <thead>
+                <tr>
+                    <th>Last name</th>
+                    <th>Name</th>
+                    <th>Surname</th>
+                    <th>Salary</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+
+        <h1 class="text-center">Last 3 employees id</h1>
+        <table class="table table-striped employeesTable" id="lastThreeEmployeesTable">
+            <thead>
+                <tr>
+                    <th>Id</th>
                 </tr>
             </thead>
             <tbody></tbody>
