--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
 <body>
     <div class="container col-md-6">
         <h1 class="text-center">Create a new employee</h1>
-        <form>
+        <form action="" name="addEmployee">
             <div class="form-group">
                 <label for="last-name" class="font-weight-bold font-italic">Enter your last name:</label>
-                <input type="text" id="last-name" placeholder="Last name" class="form-control">
+                <input type="text" id="last-name" placeholder="Last name" class="form-control" required>
             </div>
             <div class="form-group">
                 <label for="name" class="font-weight-bold font-italic">Enter name:</label>
-                <input type="text" id="name" placeholder="Name" class="form-control">
+                <input type="text" id="name" placeholder="Name" class="form-control" required>
             </div>
             <div class="form-group">
                 <label for="surname" class="font-weight-bold font-italic">Enter your surname:</label>
-                <input type="text" id="surname" placeholder="Surname" class="form-control">
+                <input type="text" id="surname" placeholder="Surname" class="form-control" required>
             </div>
 
             <div class="font-weight-bold font-italic">Choose employee type:</div>
             <div class="form-check">
-                <input type="radio" name="employeeType" id="wage-employee" value="1" class="form-check-input">
+                <input type="radio" name="employeeType" id="wage-employee" value="1" class="form-check-input" required>
                 <label for="wage-employee" class="form-check-label">Wage employee</label>
             </div>
             <div class="form-group">
@@ -47,7 +47,7 @@
             </div>
 
             <div class="row justify-content-md-center">
-                <input type="button" class="btn btn-primary align-self-center" value="Add Employee" onclick="getEmployeeData()">
+                <input type="submit" class="btn btn-primary align-self-center" value="Add Employee">
             </div>
         </form>
     </div>
